# GenesysBank

./: Anchor.toml  CAVEYgsWyeEAkAwXSA3tnqNhvFnztQkuwW1ZKfDBf9Za.json  FEETa25ux7dDxeuJCJnxWkREpFBy7RMNUA24Gyi4ZPp1.json  FRANKC3ibsaBW1o2qRuu3kspyaV4gHBuUfZ5uq9SXsqa.json  README.md  package-lock.json  package.json
programs/genesys-banking/: Cargo.toml
programs/genesys-banking/src/: constants.rs  lib.rs
programs/genesys-banking/src/instructions/: deposit.rs  initialize.rs  mod.rs  refresh_reserve.rs  withdraw.rs
tests/: genesys-banking.ts
